@@ -9,6 +9,11 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Added / runtime recommends]
  - Path::Tiny 0.058
 
+ [Added / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.005000
+ - List::Util
+ - Test::DZil
+
  [Changed / configure recommends]
  - ExtUtils::MakeMaker 7.02 → 7.00
 
@@ -30,6 +35,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Removed / develop requires]
  - Dist::Zilla::Plugin::ReadmeFromPod
+
+ [Removed / test requires]
+ - Dist::Zilla::App::Tester
 
 0.002000 2014-11-08T15:20:00Z
  [Changed / configure recommends]
